Rename AP and SP yamls;add APToBuilding converter; add WIFI filter;

--- a/EMC-SJTU-BDC/data-prepare/src/main/resources/APNamesUTF8.yaml
+++ b/EMC-SJTU-BDC/data-prepare/src/main/resources/APNamesUTF8.yaml
@@ -485,6 +485,10 @@ apprefix_sjtu:
     dsp: 学生宿舍W
     typ: DormBldg
     usr: PRVT
+  student:
+    dsp: 学生宿舍
+    typ: DormBldg
+    usr: PRVT
   southdoor:
     dsp: 凯旋门-待定
     typ: GateBldg
