--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -49,3 +49,9 @@ bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 bind -t vi-copy Y copy-end-of-line
 bind + delete-buffer
+
+# status line
+set -g status-interval 1
+
+# aggressive resizing for clients
+setw -g aggressive-resize on
