--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -91,7 +91,7 @@ setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # active window title colors
-setw -g window-status-current-fg colour166 #orange
+setw -g window-status-current-fg green #orange
 setw -g window-status-current-bg default
 setw -g window-status-current-attr bright
 
