--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -41,10 +41,10 @@ bind | split-window -h
 bind - split-window -v
 
 # pane resizing
-bind -r C-Left resize-pane -L 2
-bind -r C-Down resize-pane -D 2
-bind -r C-Up resize-pane -U 2
-bind -r C-Right resize-pane -R 2
+bind-key -n C-S-Up resize-pane -U 2
+bind-key -n C-S-Down resize-pane -D 2
+bind-key -n C-S-Left resize-pane -L 2
+bind-key -n C-S-Right resize-pane -R 2
 
 ### STATUS BAR
 
@@ -96,8 +96,8 @@ setw -g window-status-current-bg default
 setw -g window-status-current-attr bright
 
 # pane border
-set -g pane-border-fg colour235 #base02
-set -g pane-active-border-fg colour240 #base01
+set -g pane-border-fg colour235
+set -g pane-active-border-fg green
 
 # message text
 set -g message-bg colour235 #base02
