--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -41,10 +41,10 @@ bind | split-window -h
 bind - split-window -v
 
 # pane resizing
-bind-key -n C-S-Up resize-pane -U 2
-bind-key -n C-S-Down resize-pane -D 2
-bind-key -n C-S-Left resize-pane -L 2
-bind-key -n C-S-Right resize-pane -R 2
+bind Up resize-pane -U 10
+bind Down resize-pane -D 10
+bind Left resize-pane -L 10
+bind Right resize-pane -R 10
 
 ### STATUS BAR
 
