--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -2,7 +2,7 @@
 ##     http://tmux.github.io
 ## Author: Xiaming Chen, chen@xiaming.me
 
-### BASICS PERSONALIZED
+### BASICS
 
 # use UTF8
 set -g utf8
@@ -41,10 +41,10 @@ bind | split-window -h
 bind - split-window -v
 
 # pane resizing
-bind Up resize-pane -U 10
-bind Down resize-pane -D 10
-bind Left resize-pane -L 10
-bind Right resize-pane -R 10
+bind -r C-h resize-pane -L
+bind -r C-j resize-pane -D
+bind -r C-k resize-pane -U
+bind -r C-l resize-pane -R
 
 ### STATUS BAR
 
