--- a/Scripts/tmux.conf
+++ b/Scripts/tmux.conf
@@ -20,12 +20,6 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
-# set the mouse mode on
-setw -g mode-mouse on
-
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
-
 # Scroll History
 set -g history-limit 30000
 
@@ -45,6 +39,31 @@ bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
+
+### MOUSE MODE
+
+# disable mouse control by default
+# change 'off' to 'on' to enable by default.
+setw -g mode-mouse off
+set -g mouse-resize-pane off
+set -g mouse-select-pane off
+set -g mouse-select-window off
+
+# toggle mouse mode to allow mouse copy/paste
+# set mouse on with prefix m
+bind m \
+    set -g mode-mouse on \;\
+    set -g mouse-resize-pane on \;\
+    set -g mouse-select-pane on \;\
+    set -g mouse-select-window on \;\
+    display 'Mouse: ON'
+# set mouse off with prefix M
+bind M \
+    set -g mode-mouse off \;\
+    set -g mouse-resize-pane off \;\
+    set -g mouse-select-pane off \;\
+    set -g mouse-select-window off \;\
+    display 'Mouse: OFF'
 
 ### STATUS BAR
 
