--- a/Scripts/dotfiles/.tmux.conf
+++ b/Scripts/dotfiles/.tmux.conf
@@ -6,6 +6,7 @@
 # tmux plugin manager
 # To install:
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# In tmux, prefix + I to install plugins
 #
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
